--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,13 +1,16 @@
 AllCops:
-  TargetRubyVersion: 2.6
+  Exclude:
+    - "bin/**/*"
+    - "test/**/*"
+    - "Rakefile"
+    - "descripto.gemspec"
+  TargetRubyVersion: 3.2
 
-Style/StringLiterals:
-  Enabled: true
-  EnforcedStyle: double_quotes
+Style/Documentation:
+  Enabled: false
 
-Style/StringLiteralsInInterpolation:
-  Enabled: true
-  EnforcedStyle: double_quotes
+Style/FrozenStringLiteralComment:
+  Enabled: false
 
 Layout/LineLength:
   Max: 120
