--- a/test/dummy/test/fixtures/descripto/descriptives.yml
+++ b/test/dummy/test/fixtures/descripto/descriptives.yml
@@ -1,3 +1,6 @@
 jan_tore_football:
   description: football
   describable: jan_tore (Person)
+jan_tore_norwegian:
+  description: norwegian
+  describable: jan_tore (Person)
