--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Ruby
+name: Descripto CI
 
 on:
   pull_request:
@@ -8,7 +8,9 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-    name: Descripto Tests
+    name: Build and Test
+    env:
+      CI: true
 
     steps:
     - uses: actions/checkout@v3
