--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,11 +14,20 @@ jobs:
       RAILS_ENV: test
 
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v4
     - name: Set up Ruby
       uses: ruby/setup-ruby@v1
       with:
         ruby-version: 3.3.4
         bundler-cache: true
+
+    - name: Install dependencies
+      run: bundle install --jobs 4 --retry 3
+
+    - name: Set up database
+      run: |
+        cd test/dummy
+        bin/rails db:create db:migrate RAILS_ENV=test  
+    
     - name: Run tests
       run: bundle exec rake test
