--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,7 +22,9 @@ jobs:
         bundler-cache: true
 
     - name: Install dependencies
-      run: bundle install --jobs 4 --retry 3
+      run: |
+        bundle install --jobs 4 --retry 3
+        cd test/dummy && bundle install --jobs 4 --retry 3
 
     - name: Set up database
       run: |
