--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,4 +32,4 @@ jobs:
         bin/rails db:create db:migrate RAILS_ENV=test  
     
     - name: Run tests
-      run: bundle exec rake test
+      run: rake test
