test: setup dummy app and tests (#2)

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,28 @@
 /pkg/
 /spec/reports/
 /tmp/
+/log/
+
+.byebug_history
+
+# Dummy app
+# Ignore bundler config.
+test/dummy/.bundle
+test/dummy/.yardoc
+
+# Ignore all logfiles and tempfiles.
+test/dummy/log/*
+test/dummy/tmp/*
+
+# Ignore vendor
+test/dummy/vendor/*
+test/dummy/storage/*
+test/dummy/public/*
+
+
+# Ignore pidfiles, but keep the directory.
+/test/dummy/tmp/pids/*
+
+# Ignore uploaded files in development.
+test/dummy/storage/*
+test/dummy/tmp/storage/*
