--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,27 +1,35 @@
-name: Ruby
+name: CI
 
 on:
-  push:
+  pull_request:
     branches:
       - main
-
-  pull_request:
 
 jobs:
   build:
     runs-on: ubuntu-latest
-    name: Ruby ${{ matrix.ruby }}
-    strategy:
-      matrix:
-        ruby:
-          - '3.3.4'
+    name: Build and Test
+    env:
+      CI: true
+      RAILS_ENV: test
 
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v4
     - name: Set up Ruby
       uses: ruby/setup-ruby@v1
       with:
-        ruby-version: ${{ matrix.ruby }}
+        ruby-version: 3.1.2
         bundler-cache: true
-    - name: Run the default task
-      run: bundle exec rake
+
+    - name: Install dependencies
+      run: |
+        bundle install --jobs 4 --retry 3
+        cd test/dummy && bundle install --jobs 4 --retry 3
+
+    - name: Set up database
+      run: |
+        cd test/dummy
+        bin/rails db:create db:migrate RAILS_ENV=test  
+    
+    - name: Run tests
+      run: rake test
