test: add comprehensive test suite for polymorphic scoped descriptions
- Add Company and Contact models to dummy app for testing polymorphic associations
- Create fixtures for polymorphic scoped job_position descriptions
- Add ContactTest with 12 focused tests covering:
  - Namespaced description types (contact_job_position)
  - Class-filtered getter methods (job_positions_for)
  - Polymorphic scoped configuration validation
  - Proper persistence and retrieval of descriptions

--- a/test/dummy/test/fixtures/descripto/descriptions.yml
+++ b/test/dummy/test/fixtures/descripto/descriptions.yml
@@ -10,3 +10,28 @@ norwegian:
   name: 'Norwegian'
   name_key: 'norwegian'
   description_type: 'person_nationality'
+
+# Polymorphic scoped job positions
+software_engineer:
+  name: 'Software Engineer'
+  name_key: 'software_engineer'
+  description_type: 'contact_job_position'
+  class_name: 'Person'
+
+project_manager:
+  name: 'Project Manager'
+  name_key: 'project_manager'
+  description_type: 'contact_job_position'
+  class_name: 'Company'
+
+sales_director:
+  name: 'Sales Director'
+  name_key: 'sales_director'
+  description_type: 'contact_job_position'
+  class_name: 'Company'
+
+consultant:
+  name: 'Consultant'
+  name_key: 'consultant'
+  description_type: 'contact_job_position'
+  class_name: 'Person'
