Add validation concern for polymorphic scoped descriptions
- Add Validatable concern with length and class name validations
- Support validation for polymorphic scoped descriptions with allowed_classes
- Update model configurations and tests to support new validation features
- Add comprehensive test coverage for validation scenarios

--- a/test/dummy/test/fixtures/descripto/descriptions.yml
+++ b/test/dummy/test/fixtures/descripto/descriptions.yml
@@ -35,3 +35,23 @@ consultant:
   name_key: 'consultant'
   description_type: 'contact_job_position'
   class_name: 'Person'
+
+male:
+  name: 'Male'
+  name_key: 'male'
+  description_type: 'gender'
+
+female:
+  name: 'Female'
+  name_key: 'female'
+  description_type: 'gender'
+
+other:
+  name: 'Other'
+  name_key: 'other'
+  description_type: 'gender'
+
+german:
+  name: 'German'
+  name_key: 'german'
+  description_type: 'nationality'
