fix: Fix has_one not being set
- Introduced Organization and Contact models with appropriate associations.
- Updated Person model to include organization association and nested attributes for contact.
- Modified schema to reflect new tables and relationships.
- Added tests for organization and person creation with associated records.
- Updated fixtures to support new data structure.

--- a/test/dummy/test/fixtures/descripto/descriptions.yml
+++ b/test/dummy/test/fixtures/descripto/descriptions.yml
@@ -10,3 +10,15 @@ norwegian:
   name: 'Norwegian'
   name_key: 'norwegian'
   description_type: 'person_nationality'
+indonesian:
+  name: 'Indonesian'
+  name_key: 'indonesian'
+  description_type: 'person_nationality'
+ceo:
+  name: 'CEO'
+  name_key: 'ceo'
+  description_type: 'job_position'
+cto:
+  name: 'CTO'
+  name_key: 'cto'
+  description_type: 'job_position'
