refactor: restructure associated module and introduce builders
- Removed the Customized module and integrated its functionality into the Associated module.
- Added Builders for associations, methods, and validations to streamline the definition of descriptive relationships.
- Updated the Person model to include a presence validation for nationality and modified tests to ensure correct behavior with new associations.
- Enhanced the description type handling and improved the overall structure for better maintainability.

--- a/test/dummy/test/fixtures/descripto/descriptions.yml
+++ b/test/dummy/test/fixtures/descripto/descriptions.yml
@@ -6,6 +6,10 @@ programming:
   name: 'Programming'
   name_key: 'programming'
   description_type: 'interest'
+basketball:
+  name: 'Basketball'
+  name_key: 'basketball'
+  description_type: 'interest'
 norwegian:
   name: 'Norwegian'
   name_key: 'norwegian'
